--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
+    "name": "RoyalCraft-Launcher",
+    "preductname": "RoyalCraft Launcher",
     "version": "1.3.2",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Luuxis",
-    "url": "http://launcher.luuxis.fr/launcherSelvania",
+    "url": "https://src.royal-craft.fr",
     "engines": {
         "node": "^18.x.x"
     },
@@ -34,6 +34,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/TroshHost/Selvania-Launcher.git"
     }
 }
