--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "RoyalCraft-Launcher",
     "preductname": "RoyalCraft Launcher",
     "version": "2.0.0",
-    "description": "Launcher Mincraft custom (crack, premium)",
+    "description": "Launcher Mincraft custom (crack, premium) for royalcraft",
     "main": "src/app.js",
     "author": "Luuxis",
     "url": "https://src.royal-craft.fr",
